# covdir-report-action

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yaml
.github/: dependabot.yml
.github/workflows/: docker.yaml  release.yaml  rust-ci.yaml
src/: main.rs  node.rs
src/snapshots/: covdir_report_action__test__write_summary_ok.snap  covdir_report_action__tests__write_output_ok.snap
tests/: integration.rs
