[package]
name = "covdir-report-action"
version = "0.2.0"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
repository = "https://github.com/ecliptical/covdir-report-action"
description = """
GitHub Action for generating simple code coverage reports from grcov-generated covdir files.
"""
categories = [
    "development-tools",
]
keywords = ["github-action", "coverage", "ci-cd", "report", "grcov", "covdir"]
license = "MIT"
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1"
env_logger = "0.11"
figment = { version = "0.10", features = ["env"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
serde_yaml = "0.9"

[features]
default = ["log-level-info"]

# Set only one of these
log-level-info = ["log/release_max_level_info"]
log-level-debug = ["log/release_max_level_debug"]
log-level-trace = ["log/release_max_level_trace"]

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
