[package]
name = "covdir-report-action"
version = "0.2.3"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
repository = "https://github.com/ecliptical/covdir-report-action"
description = """
GitHub Action for generating simple code coverage reports from grcov-generated covdir files.
"""
categories = [
    "development-tools",
]
keywords = ["github-action", "coverage", "ci-cd", "report", "grcov"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow = "1"
gha = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
serde_yaml = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
